--- a/download.html
+++ b/download.html
@@ -115,7 +115,7 @@
                         </div>
                     </div>
 
-                    <a class="plan-price single_price_link" href="https://drive.google.com/file/d/1DLonbEPFs8-Sd8KicDBO-mG13RayL-zJ/view?usp=sharing">
+                    <a class="plan-price single_price_link" href="https://drive.google.com/file/d/1d96if52qTo8oWAo5SnsKBkGa-bIXPN0N/view?usp=drive_link">
                         zł/$/€<span id="single_price">0</span>/year
                         <span class="glyphicon glyphicon-chevron-right"></span>
                     </a>
@@ -131,15 +131,23 @@
 
 <div class="payment-section">
     <div class="container">
-        <h3>In charge of upgrade?</h3>
+        <h3>Versions</h3>
         <div class="row">
             
             <div class="col-sm-6 col-md-4 col-lg-4">
-                <a href="https://drive.google.com/file/d/1DLonbEPFs8-Sd8KicDBO-mG13RayL-zJ/view?usp=sharing" data-toggle="modal" data-target="#renew-modal">
-                    <img class="center-block img-responsive" src="http://web.archive.org/web/20160616134127im_/https://d2qrjeyl4jwu9j.cloudfront.net/static/874978b4f83fb64e/school/img/plans/img_renewSub.png">Upgrade from GA4SR 1.1.2 to 1.2 (Public beta 1) &gt;
+                <a href="https://github.com/GreatColdViolet/ga4sr1.1.2/archive/refs/heads/main.zip" data-toggle="modal" data-target="#renew-modal">
+                    <img class="center-block img-responsive" src="http://web.archive.org/web/20160616134127im_/https://d2qrjeyl4jwu9j.cloudfront.net/static/874978b4f83fb64e/school/img/plans/img_renewSub.png">GA4SR 1.1.2
 </a>
             </div>
-        </div>
+        <div class="col-sm-6 col-md-4 col-lg-4">
+                <a href="https://drive.google.com/file/d/1DLonbEPFs8-Sd8KicDBO-mG13RayL-zJ/view?usp=sharing" data-toggle="modal" data-target="#renew-modal">
+                    <img class="center-block img-responsive" src="http://web.archive.org/web/20160616134127im_/https://d2qrjeyl4jwu9j.cloudfront.net/static/874978b4f83fb64e/school/img/plans/img_renewSub.png">GA4SR 1.2 Beta
+</a>
+            </div><div class="col-sm-6 col-md-4 col-lg-4">
+                <a href="https://drive.google.com/file/d/1d96if52qTo8oWAo5SnsKBkGa-bIXPN0N/view?usp=drive_link" data-toggle="modal" data-target="#renew-modal">
+                    <img class="center-block img-responsive" src="http://web.archive.org/web/20160616134127im_/https://d2qrjeyl4jwu9j.cloudfront.net/static/874978b4f83fb64e/school/img/plans/img_renewSub.png">GA4SR 1.2 Final (UnOfficial)
+</a>
+            </div></div>
     </div>
 </div>
 
