--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ var GT = new Gettext({'locale_data': json_locale_data});
 
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/download">Download</a></li>
+                <li><a href="download.html">Download</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" href="#" data-toggle="dropdown">More<span class="caret"></span></a>
                     <ul class="dropdown-menu">
