--- a/404.html
+++ b/404.html
@@ -86,9 +86,9 @@ ul {
             <div class="details">
                 <div class="title">Here are some helpful links:</div>
                 <ul>
-                    <li><a href="http://bluepeacocks.github.io/">Homepage</a></li>
-                    <li><a href="https://discord.gg/DPQSVdFDxu">Help Center (Discord)</a></li>
-                    <li><a href="https://discord.gg/DPQSVdFDxu">Contact Us (Discord)</a></li>
+                    <li><a href="/goanimate4schools-remastered">Homepage</a></li>
+                    <li><a href="https://discord.gg/DPQSVdFDxu">Help Center BluePeaCocks (Discord)</a></li>
+                    <li><a href="https://discord.gg/DPQSVdFDxu">Contact BluePeaCocks (Discord)</a></li>
                 </ul>
             </div>
         </div>
